@@ -1,1 +1,1 @@
-{"version":"5.4-RC3","releasedate":"2016-08-05"}
+{"version":"5.4-RC3","releasedate":"2016-08-06"}
