@@ -86,6 +86,7 @@ Ver.5.4 (in release candidate)
 - [BUG FIX] On the update and create operation, the recordset modified by adviser definition class doesn't
   affect to the mail.
 - [BUG FIX] Improve updating the display of nodes which depends on the value of radio buttons.
+- [BUG FIX] Sample_Asset's detail pages didn't show right record.
 
 Ver.5.3 (February 21, 2016)
 - Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
